--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: "辉光字幕组 NixieSubs"
-email: "lttchina@linusmediagroup.com"
+email: "nixiesubs@gmail.com"
 description: "是谁在凝望，寒夜尽头迷离的辉光？"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: #"https://www.nixiesubs.com" # the base hostname & protocol for your site, e.g. http://example.com
